<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/spacing_medium">

    <TextView
        android:id="@+id/text_title"
        style="@style/TextAppearance.App.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_subtitle"
        style="@style/TextAppearance.App.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/screen_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        app:cardCornerRadius="@dimen/corner_radius_medium"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_subtitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium">

            <ImageView
                android:id="@+id/image_icon"
                android:layout_width="@dimen/icon_size_large"
                android:layout_height="@dimen/icon_size_large"
                android:src="@drawable/ic_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/primary" />

            <TextView
                android:id="@+id/text_card_title"
                style="@style/TextAppearance.App.Headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:text="@string/card_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_icon"
                app:layout_constraintTop_toTopOf="@+id/image_icon" />

            <TextView
                android:id="@+id/text_card_description"
                style="@style/TextAppearance.App.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/card_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_icon"
                app:layout_constraintTop_toBottomOf="@+id/text_card_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/button_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_info"
        tools:listitem="@layout/item_list" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_details"
        style="@style/Widget.App.Button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>